--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,66 @@
 <resources>
+    <string name="activity_title_str">Title</string>
+    <string name="activity_time_str">Time</string>
+    <string name="activity_info_str">Info</string>
+    <string name="signup_title_str">Account Login</string>
+    <string name="password_str">Password</string>
+    <string name="username_str">Room number</string>
+    <string name="signup_bt_str">Sign up</string>
     <string name="app_name">AlphaHotal</string>
+    <string name="Reception_str">Reception</string>
+    <string name="Housekeeping_str">Housekeeping</string>
+    <string name="Security_str">Security</string>
+    <string name="Information_str">Information</string>
+    <string name="Room_Service_str">Room Service</string>
+    <string name="Maintenance_str">Maintenance</string>
+    <string name="Feedback_str">Feedback</string>
+    <string name="activity_location_str">Location</string>
+    <string name="fix_safe_str">Fix Safe</string>
+    <string name="open_safe_str">Open Safe</string>
+    <string name="bellboy_str">Bellboy</string>
+    <string name="open_door_str">Open Door</string>
+    <string name="first_aid_str">First Aid</string>
+    <string name="call_str">Call</string>
+    <string name="power_failure_str">Power Failure</string>
+    <string name="plumbing_fault_str">Plumbing Fault</string>
+    <string name="fix_door_str">Fix Door</string>
+    <string name="fix_phone_str">Fix Phone</string>
+    <string name="Toiletries_str">Toiletries</string>
+    <string name="Towel_str">Towel</string>
+    <string name="Paper_str">Paper toilet</string>
+    <string name="baby_bed_str">Baby bed</string>
+    <string name="bedding_str">Bedding</string>
+    <string name="Clean_room_str">Clean room</string>
+    <string name = "Hamburger_str">Hamburger</string>
+    <string name = "Coffee_str">Coffee</string>
+    <string name = "Cola_str">Cola</string>
+    <string name = "Fish_str">Fish</string>
+    <string name = "Salmon_str">Salmon</string>
+    <string name = "Cake_str">Cake</string>
+    <string name = "Pizza_str">Pizza</string>
+    <string name = "Sushi_str">Sushi</string>
+    <string name = "Chicken_str">Chicken</string>
+    <string name = "Water_str">Water</string>
+    <string name = "Employees_Rating_str">Employees Rating</string>
+    <string name = "Food_Rating_str">Food Rating</string>
+    <string name = "Hotel_Feedback_str">Hotel Feedback</string>
+    <string name = "book_trip_str">Book a Trip</string>
+    <string name = "Recommend_tours_str">Recommend tours</string>
+    <string name = "Recommend_restaurants_str">Recommend restaurants</string>
+    <string name = "Get_Taxi_str">Get Taxi</string>
+    <string name = "Wake_up_call_str">Wake up call</string>
+    <string name = "Weather_str">Weather</string>
+    <string name = "Maps_str">Maps</string>
+    <string name = "Flight_Times_str">Flight Times</string>
+    <string name = "Shabbat_Hours_str">Shabbat Hours</string>
+    <string name = "Dinning_Hours_str">Dinning Hours</string>
+    <string name = "Activities_str">Activities</string>
+    <string name = "Pool_hours_str">Pool hours</string>
+
+
+
+
+
+
+
 </resources>
