--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,35 +31,62 @@
     <string name="baby_bed_str">Baby bed</string>
     <string name="bedding_str">Bedding</string>
     <string name="Clean_room_str">Clean room</string>
-    <string name = "Hamburger_str">Hamburger</string>
-    <string name = "Coffee_str">Coffee</string>
-    <string name = "Cola_str">Cola</string>
-    <string name = "Fish_str">Fish</string>
-    <string name = "Salmon_str">Salmon</string>
-    <string name = "Cake_str">Cake</string>
-    <string name = "Pizza_str">Pizza</string>
-    <string name = "Sushi_str">Sushi</string>
-    <string name = "Chicken_str">Chicken</string>
-    <string name = "Water_str">Water</string>
-    <string name = "Employees_Rating_str">Employees Rating</string>
-    <string name = "Food_Rating_str">Food Rating</string>
-    <string name = "Hotel_Feedback_str">Hotel Feedback</string>
-    <string name = "book_trip_str">Book a Trip</string>
-    <string name = "Recommend_tours_str">Recommend tours</string>
-    <string name = "Recommend_restaurants_str">Recommend restaurants</string>
-    <string name = "Get_Taxi_str">Get Taxi</string>
-    <string name = "Wake_up_call_str">Wake up call</string>
-    <string name = "Weather_str">Weather</string>
-    <string name = "Maps_str">Maps</string>
-    <string name = "Flight_Times_str">Flight Times</string>
-    <string name = "Shabbat_Hours_str">Shabbat Hours</string>
-    <string name = "Dinning_Hours_str">Dinning Hours</string>
-    <string name = "Activities_str">Activities</string>
-    <string name = "Pool_hours_str">Pool hours</string>
+    <string name="Hamburger_str">Hamburger</string>
+    <string name="Coffee_str">Coffee</string>
+    <string name="Cola_str">Cola</string>
+    <string name="Fish_str">Fish</string>
+    <string name="Salmon_str">Salmon</string>
+    <string name="Cake_str">Cake</string>
+    <string name="Pizza_str">Pizza</string>
+    <string name="Sushi_str">Sushi</string>
+    <string name="Chicken_str">Chicken</string>
+    <string name="Water_str">Water</string>
+    <string name="Employees_Rating_str">Employees Rating</string>
+    <string name="Food_Rating_str">Food Rating</string>
+    <string name="Hotel_Feedback_str">Hotel Feedback</string>
+    <string name="book_trip_str">Book a Trip</string>
+    <string name="Recommend_tours_str">Recommend tours</string>
+    <string name="Recommend_restaurants_str">Recommend restaurants</string>
+    <string name="Get_Taxi_str">Get Taxi</string>
+    <string name="Wake_up_call_str">Wake up call</string>
+    <string name="Weather_str">Weather</string>
+    <string name="Maps_str">Maps</string>
+    <string name="Flight_Times_str">Flight Times</string>
+    <string name="Shabbat_Hours_str">Shabbat Hours</string>
+    <string name="Dinning_Hours_str">Dinning Hours</string>
+    <string name="Activities_str">Activities</string>
+    <string name="Pool_hours_str">Pool hours</string>
+    <string name="New_request_accepted_successfully_str">New request accepted successfully</string>
+    <string name="Connection_error_try_again_later_str">Connection error! try again later</string>
+    <string name="Delivring_request_str">Delivering request....</string>
+    <string name = "telAviv_str">Tel Aviv</string>
+    <string name = "jerusalem_str">Jerusalem</string>
+    <string name = "haifa_str">Haifa</string>
+    <string name = "benGurion_str">Ben Gurion Airport</string>
+    <string name = "eilat_str">Eilat</string>
+    <string name = "batyam_str">Bat-Yam</string>
+    <string name = "otherDest_str">Other</string>
+    <string name = "tooManyRequests_str">Too many open requests from the same service </string>
+    <string name= "not_occupied_str">This room is not occupied</string>
 
+    <string-array name="passArray">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5+</item>
+    </string-array>
 
+    <string name="Book_a_Texi_str">Book a taxi</string>
+    <string name="Destination_str">Destination</string>
+    <string name="Number_of_passengers_str"> Number_of_passengers</string>
+    <string name="Date_str">Date</string>
+    <string name="Order_str">Order</string>
+    <string name="login_result_str">Login Result</string>
+    <string name="login_failed_str">Login Failed</string>
 
-
+    <string name="select_time_str">Select Time</string>
+    <string name="empty_date_str">The date is empty</string>
 
 
 
