--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -57,4 +57,25 @@
     <string name="Dinning_Hours_str">Dinning Hours</string>
     <string name="Activities_str">Activities</string>
     <string name="Pool_hours_str">Pool hours</string>
+    <string name="New_request_accepted_successfully_str">New request accepted successfully</string>
+    <string name="Connection_error_try_again_later_str">connection error! try again later</string>
+    <string name="Delivring_request_str">Delivering request....</string>
+    <string name="Book_a_Texi_str">Book a Texi</string>
+    <string name="Destination_str">Destination</string>
+    <string name="Number_of_passengers_str">Number of passengers</string>
+    <string name="Date_str">Date</string>
+    <string name="Order_str">Order</string>
+    <string name="login_result_str">Login Result</string>
+    <string name="login_failed_str">Login Failed</string>
+    <string name="select_time_str">Select Time</string>
+    <string name="empty_date_str">The date is empty</string>
+    <string name="telAviv_str">Tel Aviv</string>
+    <string name="jerusalem_str">Jerusalem</string>
+    <string name="haifa_str">Haifa</string>
+    <string name="benGurion_str">Ben Gurion Airport</string>
+    <string name="eilat_str">Eilat</string>
+    <string name="batyam_str">Bat-Yam</string>
+    <string name="otherDest_str">Other</string>
+    <string name="tooManyRequests_str">"Too many open requests from the same service "</string>
+    <string name="not_occupied_str">"This room is not occupied "</string>
 </resources>
