--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,15 +59,33 @@
     <string name="New_request_accepted_successfully_str">New request accepted successfully</string>
     <string name="Connection_error_try_again_later_str">Connection error! try again later</string>
     <string name="Delivring_request_str">Delivering request....</string>
-    <string name = "telAviv_str">Tel Aviv</string>
-    <string name = "jerusalem_str">Jerusalem</string>
-    <string name = "haifa_str">Haifa</string>
-    <string name = "benGurion_str">Ben Gurion Airport</string>
-    <string name = "eilat_str">Eilat</string>
-    <string name = "batyam_str">Bat-Yam</string>
-    <string name = "otherDest_str">Other</string>
-    <string name = "tooManyRequests_str">Too many open requests from the same service </string>
-    <string name= "not_occupied_str">This room is not occupied</string>
+    <string name="telAviv_str">Tel Aviv</string>
+    <string name="jerusalem_str">Jerusalem</string>
+    <string name="haifa_str">Haifa</string>
+    <string name="benGurion_str">Ben Gurion Airport</string>
+    <string name="eilat_str">Eilat</string>
+    <string name="batyam_str">Bat-Yam</string>
+    <string name="otherDest_str">Other</string>
+    <string name="tooManyRequests_str">Too many open requests from the same service </string>
+    <string name="not_occupied_str">This room is not occupied</string>
+
+
+    <string name="Book_a_Texi_str">Book a taxi</string>
+    <string name="Book_a_Trip_str">Book a trip</string>
+    <string name="Destination_str">Destination</string>
+    <string name="Number_of_passengers_str"> Number_of_passengers</string>
+    <string name="Date_str">Date</string>
+    <string name="Order_str">Order</string>
+
+    <string name="login_result_str">Login Result</string>
+    <string name="login_failed_str">Login Failed</string>
+
+    <string name="select_time_str">Select Time</string>
+    <string name="empty_date_str">Please complete the date and time fields</string>
+    <string name="wakeUp_call_str">Wake up call</string>
+
+
+
 
     <string-array name="passArray">
         <item>1</item>
@@ -77,16 +95,15 @@
         <item>5+</item>
     </string-array>
 
-    <string name="Book_a_Texi_str">Book a taxi</string>
-    <string name="Destination_str">Destination</string>
-    <string name="Number_of_passengers_str"> Number_of_passengers</string>
-    <string name="Date_str">Date</string>
-    <string name="Order_str">Order</string>
-    <string name="login_result_str">Login Result</string>
-    <string name="login_failed_str">Login Failed</string>
-
-    <string name="select_time_str">Select Time</string>
-    <string name="empty_date_str">The date is empty</string>
+    <string-array name="desArray">
+        <item>Dead sea</item>
+        <item>Jerusalem and old city</item>
+        <item>Tel-aviv and Jafa</item>
+        <item>Tiberias and Sea of Galilee</item>
+        <item>Caesarea</item>
+        <item>Haifa and Acre</item>
+        <item>Mitzpe Ramon and the south</item>
+    </string-array>
 
 
 
