--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -68,7 +68,7 @@
     <string name="login_result_str">"Resultado de ingreso "</string>
     <string name="login_failed_str">error de inicio de sesion</string>
     <string name="select_time_str">"seleccionar hora "</string>
-    <string name="empty_date_str">"La fecha está vacía "</string>
+    <string name="empty_date_str">Por favor complete los campos de fecha y hora</string>
     <string name="telAviv_str">"Tel Aviv "</string>
     <string name="jerusalem_str">Jerusalén</string>
     <string name="haifa_str">haifa</string>
@@ -78,4 +78,16 @@
     <string name="otherDest_str">otro</string>
     <string name="tooManyRequests_str">"Demasiadas solicitudes abiertas del mismo servicio "</string>
     <string name="not_occupied_str">"Esta habitación no está ocupada "</string>
+    <string name="Book_a_Trip_str">Reserve un viaje</string>
+
+    <string-array name="desArray">
+        <item>Mar Muerto</item>
+        <item>Jerusalén y ciudad vieja</item>
+        <item>Tel Aviv y Jaffa</item>
+        <item>Tiberíades y Mar de Galilea</item>
+        <item>Caesarea</item>
+        <item>Haifa y Acre</item>
+        <item>Mitzpe Ramón y el sur</item>
+    </string-array>
+
 </resources>
