--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -68,7 +68,7 @@
     <string name="login_result_str">"Résultat de connexion "</string>
     <string name="login_failed_str">échec de la connexion</string>
     <string name="select_time_str">"sélectionnez l'heure "</string>
-    <string name="empty_date_str">"La date est vide "</string>
+    <string name="empty_date_str">Veuillez compléter les champs de date et d\'heure</string>
     <string name="telAviv_str">"Tel Aviv "</string>
     <string name="jerusalem_str">"Jérusalem "</string>
     <string name="haifa_str">Haïfa</string>
@@ -78,4 +78,17 @@
     <string name="otherDest_str">autre</string>
     <string name="tooManyRequests_str">"Trop de demandes ouvertes du même service "</string>
     <string name="not_occupied_str">"Cette pièce n'est pas occupée "</string>
+    <string name="Book_a_Trip_str">Réservez un voyage</string>
+
+    <string-array name="desArray">
+        <item>Mer Morte</item>
+        <item>Jérusalem et la vieille ville</item>
+        <item>Tel-aviv et Jaffa</item>
+        <item>Tibériade et mer de Galilée</item>
+        <item>Caesarea</item>
+        <item>Haïfa et Acre</item>
+        <item>Mitzpe Ramon et le sud</item>
+    </string-array>
+
+
 </resources>
